<resources>
    <string name="app_name">Movies</string>
    <string name="image">TODO</string>
    <string name="textview">TextView</string>
    <string name="it_s_time_to_watch_your_preferred_movie">it\'s time to watch your preferred movie</string>
    <string name="hello_there_welcome_back">Hello there, Welcome back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="back_home">Back Home</string>
</resources>